--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <meta name="image"                 content="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ60V4_w9KXRW3eVIAJDmxoM81vatP45ldUDQ&usqp=CAU"/>
         <meta name="veiwport"              content= "width=device-width, initial-scale=1.0">
         <script> function aboutUs() {window.location.href = "https://ayaan-codes.github.io/a-co/aboutus.html"}</script>
+        <script data-ad-client="ca-pub-1038210963978154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
         
         
